Something is very broken as strings seem to just disappear.

--- a/swig/Makefile
+++ b/swig/Makefile
@@ -4,5 +4,5 @@ SRC=../lib/*.cpp
 perl:
 	${SWIG} -c++ -perl -I../lib Netkit.i
 
-	g++ --std=c++17 -fPIC -shared `perl -MConfig -e 'print join(" ", @Config{qw(ccflags optimize cccdlflags)}, "-I$$Config{archlib}/CORE")'` \
+	g++ --std=c++17 -fPIC -shared -DSWIG `perl -MConfig -e 'print join(" ", @Config{qw(ccflags optimize cccdlflags)}, "-I$$Config{archlib}/CORE")'` \
 		`perl -MConfig -e 'print $$Config{lddlflags}'` -I../lib ${SRC} Netkit_wrap.cxx -o Netkit.so
