Attempt build fix, add dependency install.

--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -10,6 +10,6 @@ jobs:
         uses: shogo82148/actions-setup-perl@v1
         with:
           perl-version: '5.30'
-      - run: perl -V
-      - run: perl Makefile.PM
+      - run: cpan install -y File::Copy::Recursive
+      - run: perl Makefile.PL
       - run: make dist
