--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -17,6 +17,7 @@ jobs:
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.RELEASE_TOKEN }}"
+          automatic_release_tag: "latest"
           prerelease: false
           files: |
             Netkit*.tar.gz
